Switched to Alarm Cause of weird chrome idle for timers

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Love Notes for My Girlfriend",
   "version": "1.0",
   "description": "Shows sweet love notes as notifications",
-  "permissions": ["storage", "notifications"],
+  "permissions": ["storage", "notifications", "alarms"],
   "background": {
     "service_worker": "background.js"
   },
